--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "http-server": "^0.11.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-mdl": "^1.11.0",
