--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.0",
     "http-server": "^0.11.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-mdl": "^1.11.0",
+    "react-protected-mailto": "^1.0.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "reactstrap": "^7.1.0",
     "schema-utils": "^1.0.0"
   },
   "scripts": {
