--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-mdl": "^1.11.0",
     "react-protected-mailto": "^1.0.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.5",
     "reactstrap": "^7.1.0",
     "schema-utils": "^1.0.0"
   },
